# cc-token-usage

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README_ZH.md  SECURITY.md  SKILL.md  config.example.toml  install.sh  overview-full
.claude/agents/: builder.md  cicd.md  code-reviewer.md  competitive-researcher.md  data-mining-committee.md  diff-analyst.md  qa-engineer.md  test-qa-lead.md
.committee/: roster.yaml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
crates/cc-session-dag/: Cargo.toml
crates/cc-session-dag/examples/: main_chain_probe.rs  scanner_audit.rs
crates/cc-session-dag/src/: lib.rs
crates/cc-session-dag/tests/: real_data_dag_smoke.rs
crates/cc-session-jsonl/: Cargo.toml
crates/cc-session-jsonl/src/: lib.rs  loader.rs  parser.rs  scanner.rs  session.rs
crates/cc-session-jsonl/src/types/: assistant.rs  attachment.rs  common.rs  context.rs  metadata.rs  mod.rs  progress.rs  system.rs  tracking.rs  user.rs  workflow.rs
crates/cc-session-jsonl/tests/: fill_rate.rs  integration.rs  loader_spec.rs  real_data.rs  real_data_smoke.rs  spec_v2.rs  workflow_qa.rs
crates/cc-session-jsonl/tests/fixtures/: real_v2_0_legacy.jsonl  real_v2_1_140.jsonl
crates/cc-token-usage/: Cargo.toml
crates/cc-token-usage/src/: cli.rs  config.rs  lib.rs  main.rs  update.rs
crates/cc-token-usage/src/analysis/: heatmap.rs  mod.rs  overview.rs  project.rs  session.rs  trend.rs  validate.rs  wrapped.rs
crates/cc-token-usage/src/dag/: builder.rs  mod.rs
crates/cc-token-usage/src/data/: loader.rs  models.rs  parser.rs  scanner.rs
crates/cc-token-usage/src/output/: dag_html.rs  dag_template.html  html.rs  html_new.rs  json.rs  mod.rs  template.html  text.rs
crates/cc-token-usage/src/pricing/: calculator.rs
crates/cc-token-usage/tests/: text_snapshots.rs  workflow_qa.rs
crates/cc-token-usage/tests/snapshots/: text_snapshots__snapshot_overview_three_session_fixture.snap  text_snapshots__snapshot_projects_two_project_fixture.snap  text_snapshots__snapshot_trend_monthly_fixture.snap
docs/: cc-session-jsonl-v2-field-survey.md  dashboard-data-guide.md  html-redesign-final.md  html-redesign-proposal.md  session-data-model.md  session-id-relationships.excalidraw  workflow-support.md
docs/superpowers/specs/: 2026-05-13-jsonl-v2.1-update-design.md
frontend/: .gitignore  env.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  style.css  types.ts
frontend/src/components/: BarChart.vue  CalendarHeatmap.vue  ComboChart.vue  DataTable.vue  DoughnutChart.vue  FilterPills.vue  HBarChart.vue  KpiCard.vue  LineChart.vue  Sidebar.vue
frontend/src/composables/: useData.ts  useI18n.ts  useTheme.ts
frontend/src/pages/: Heatmap.vue  Overview.vue  Projects.vue  Sessions.vue  Trends.vue  Wrapped.vue
npm-package/: package.json
npm/darwin-arm64/: package.json
npm/darwin-x64/: package.json
npm/linux-arm64/: package.json
npm/linux-x64/: package.json
scripts/: run-real-e2e.sh  survey-jsonl-field.py
src/: cli.rs  lib.rs  main.rs
src/analysis/: mod.rs  overview.rs  project.rs  session.rs  trend.rs  validate.rs
src/data/: loader.rs  mod.rs  models.rs  parser.rs  scanner.rs
src/output/: html.rs  text.rs
src/pricing/: calculator.rs
