[package]
name = "cc-token-usage"
version = "1.0.0"
edition = "2021"
description = "Analyze Claude Code session token usage, costs, and efficiency"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
comfy-table = "7"
toml = "0.8"
dirs = "6"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
