[package]
name = "cc-session-dag"
version = "0.1.0"
edition = "2021"
description = "Reconstruct Claude Code session conversation DAG from JSONL — trunk chain, rewind branches, tool pairing"
license = "MIT"
repository = "https://github.com/LokiQ0713/cc-token-usage"
keywords = ["claude", "claude-code", "session", "dag"]
categories = ["parser-implementations"]

[dependencies]
cc-session-jsonl = { path = "../cc-session-jsonl" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
