[package]
name = "cc-session-jsonl"
version = "0.4.0"
edition = "2021"
description = "Parse and structure Claude Code session JSONL files — 25 entry types, 4 file layouts, forward-compatible"
license = "MIT"
repository = "https://github.com/LokiQ0713/cc-token-usage"
keywords = ["claude", "claude-code", "session", "jsonl", "parser"]
categories = ["parser-implementations"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
